// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubGenerator server of micronaut JHipster blueprint > run > should succeed 1`] = `
{
  ".editorconfig": {
    "stateCleared": "modified",
  },
  ".gitattributes": {
    "stateCleared": "modified",
  },
  ".gitignore": {
    "stateCleared": "modified",
  },
  ".husky/pre-commit": {
    "stateCleared": "modified",
  },
  ".lintstagedrc.cjs": {
    "stateCleared": "modified",
  },
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".prettierignore": {
    "stateCleared": "modified",
  },
  ".prettierrc": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "sonar-project.properties": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jib/entrypoint.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ActiveProfilesInfoSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DefaultProfileUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/MessagesBundleMessageSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SnakeCasePhysicalNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/AuthorityRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/UserRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BcryptPasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/DatabaseAuthenticationProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/Logout.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/NotAuthenticatedResponse.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/PasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityHeaderFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailSenderFactory.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/AdminUserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/PaginationUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ClientForwardController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/PublicUserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SwaggerResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/AbstractThrowableProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ConstraintViolationExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemRejectionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/UnsatisfiedRouteExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/bootstrap.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/00000000000000_initial_schema.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user_authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/master.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/error.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/testEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/DomainUserDetailsServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityHeaderFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/JWTFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/UserServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ClientForwardControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/TestDTO.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/application-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/bootstrap-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator server of micronaut JHipster blueprint > with gradle build tool > should succeed 1`] = `
{
  ".editorconfig": {
    "stateCleared": "modified",
  },
  ".gitattributes": {
    "stateCleared": "modified",
  },
  ".gitignore": {
    "stateCleared": "modified",
  },
  ".husky/pre-commit": {
    "stateCleared": "modified",
  },
  ".lintstagedrc.cjs": {
    "stateCleared": "modified",
  },
  ".prettierignore": {
    "stateCleared": "modified",
  },
  ".prettierrc": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "build.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/build.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/gradle/libs.versions.toml": {
    "stateCleared": "modified",
  },
  "buildSrc/src/main/groovy/jhipster.code-quality-conventions.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/src/main/groovy/jhipster.docker-conventions.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/src/main/groovy/jhipster.node-gradle-conventions.gradle": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "gradle.properties": {
    "stateCleared": "modified",
  },
  "gradle/docker.gradle": {
    "stateCleared": "modified",
  },
  "gradle/libs.versions.toml": {
    "stateCleared": "modified",
  },
  "gradle/liquibase.gradle": {
    "stateCleared": "modified",
  },
  "gradle/profile_dev.gradle": {
    "stateCleared": "modified",
  },
  "gradle/profile_prod.gradle": {
    "stateCleared": "modified",
  },
  "gradle/wrapper/gradle-wrapper.jar": {
    "stateCleared": "modified",
  },
  "gradle/wrapper/gradle-wrapper.properties": {
    "stateCleared": "modified",
  },
  "gradlew": {
    "stateCleared": "modified",
  },
  "gradlew.bat": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "settings.gradle": {
    "stateCleared": "modified",
  },
  "sonar-project.properties": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jib/entrypoint.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ActiveProfilesInfoSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DefaultProfileUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/MessagesBundleMessageSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SnakeCasePhysicalNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/AuthorityRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/UserRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BcryptPasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/DatabaseAuthenticationProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/Logout.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/NotAuthenticatedResponse.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/PasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityHeaderFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailSenderFactory.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/AdminUserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/PaginationUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ClientForwardController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/PublicUserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SwaggerResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/AbstractThrowableProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ConstraintViolationExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemRejectionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/UnsatisfiedRouteExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/bootstrap.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/00000000000000_initial_schema.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user_authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/master.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/error.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/testEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/DomainUserDetailsServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityHeaderFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/JWTFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/UserServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ClientForwardControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/TestDTO.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/application-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/bootstrap-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator server of micronaut JHipster blueprint > with maven build tool > should succeed 1`] = `
{
  ".editorconfig": {
    "stateCleared": "modified",
  },
  ".gitattributes": {
    "stateCleared": "modified",
  },
  ".gitignore": {
    "stateCleared": "modified",
  },
  ".husky/pre-commit": {
    "stateCleared": "modified",
  },
  ".lintstagedrc.cjs": {
    "stateCleared": "modified",
  },
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".prettierignore": {
    "stateCleared": "modified",
  },
  ".prettierrc": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "sonar-project.properties": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jib/entrypoint.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ActiveProfilesInfoSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DefaultProfileUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/MessagesBundleMessageSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SnakeCasePhysicalNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/AuthorityRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/UserRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BcryptPasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/DatabaseAuthenticationProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/Logout.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/NotAuthenticatedResponse.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/PasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityHeaderFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailSenderFactory.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/AdminUserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/PaginationUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ClientForwardController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/PublicUserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SwaggerResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/AbstractThrowableProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ConstraintViolationExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemRejectionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/UnsatisfiedRouteExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/bootstrap.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/00000000000000_initial_schema.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user_authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/master.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/error.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/testEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/DomainUserDetailsServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityHeaderFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/JWTFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/UserServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ClientForwardControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/TestDTO.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/application-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/bootstrap-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator server of micronaut JHipster blueprint > with some entities > should succeed 1`] = `
{
  ".editorconfig": {
    "stateCleared": "modified",
  },
  ".gitattributes": {
    "stateCleared": "modified",
  },
  ".gitignore": {
    "stateCleared": "modified",
  },
  ".husky/pre-commit": {
    "stateCleared": "modified",
  },
  ".jhipster/Entity.json": {
    "stateCleared": "modified",
  },
  ".lintstagedrc.cjs": {
    "stateCleared": "modified",
  },
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".prettierignore": {
    "stateCleared": "modified",
  },
  ".prettierrc": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "sonar-project.properties": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jib/entrypoint.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/JhipsterApp.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ActiveProfilesInfoSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/ApplicationProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/CacheConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/DefaultProfileUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LoggingConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/MessagesBundleMessageSource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/SnakeCasePhysicalNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/metric/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Entity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/AuthorityRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/UserRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BcryptPasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/DatabaseAuthenticationProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/Logout.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/NotAuthenticatedResponse.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/PasswordEncoder.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityHeaderFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/SecurityUtils.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailSenderFactory.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/AdminUserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/EntityDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/PaginationUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ClientForwardController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/EntityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/PublicUserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SwaggerResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/AbstractThrowableProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ConstraintViolationExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/ProblemRejectionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/UnsatisfiedRouteExceptionHandler.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/handlers/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-dev.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-prod.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application-tls.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/bootstrap.yml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/00000000000000_initial_schema.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20200804035352_added_entity_Entity.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user_authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/entity.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/master.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/logback.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/error.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/views/mail/testEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/entity.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/CorsTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/EntityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/EntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/EntityTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/DomainUserDetailsServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityHeaderFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/SecurityUtilsUnitTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/security/jwt/JWTFilterTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/UserServiceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/dto/EntityDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/EntityMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ClientForwardControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/EntityResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/ExceptionTranslatorTestController.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/errors/TestDTO.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/application-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/bootstrap-test.yml": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/test/resources/logback.xml": {
    "stateCleared": "modified",
  },
}
`;
